--- a/404.html
+++ b/404.html
@@ -124,6 +124,10 @@
   <h2>Recent Posts</h2>
   
   <ul>
+    <li><a href="/post/february-28-2017-in-class-project/">February 28, 2017 - In-Class Project</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/2016-12-30-hello-markdown/">A Plain Markdown Post</a></li>
   </ul>
   
