My First page commit

--- a/about/index.html
+++ b/about/index.html
@@ -208,7 +208,7 @@
   <div id="disqus_thread">
     <div id="disqus_thread"></div>
 <script type="text/javascript">
-    var disqus_shortname = 'wanting-zhai';
+    var disqus_shortname = 'wanting-zhai.disqus.com';
     var disqus_identifier = '\/about\/';
     var disqus_title = 'About';
     var disqus_url = '\/about\/';
