--- a/about/index.html
+++ b/about/index.html
@@ -215,7 +215,7 @@
                 return;
 
       var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-      var disqus_shortname = 'Wanting-Zhai';
+      var disqus_shortname = 'wanting-zhai';
       dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
       (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
 })();
