--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         
         
         <li>
-          <a href="https://github.com/Wanting-Zhai" target="_blank">
+          <a href="https://github.com/Wanting-Zhai/" target="_blank">
             <i class="fa fa-github big-icon"></i>
           </a>
         </li>
@@ -424,9 +424,9 @@
 }</code></pre>
 <pre class="r"><code>some_normals &lt;- rnorm(100,mean=7,sd=5)
 mean(some_normals)</code></pre>
-<pre><code>## [1] 6.889427</code></pre>
+<pre><code>## [1] 6.867022</code></pre>
 <pre class="r"><code>(formula_se_of_mean &lt;- sd(some_normals)/sqrt(length(some_normals)))</code></pre>
-<pre><code>## [1] 0.4380699</code></pre>
+<pre><code>## [1] 0.5668422</code></pre>
 <pre class="r"><code>all.equal(formula_se_of_mean,mean.jackknife(some_normals))</code></pre>
 <pre><code>## [1] TRUE</code></pre>
 
