My First page commit

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
   <link rel="stylesheet" href="/css/hugo-academic.css">
   
 
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Wanting Zhai">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Wanting Zhai">
+  <link rel="alternate" href="https://wanting-zhai.github.io/index.xml" type="application/rss+xml" title="Wanting Zhai">
+  <link rel="feed" href="https://wanting-zhai.github.io/index.xml" type="application/rss+xml" title="Wanting Zhai">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="/">
+  <link rel="canonical" href="https://wanting-zhai.github.io/">
 
   
 
@@ -354,7 +354,7 @@
   
   
   <h3 class="article-title" itemprop="name">
-    <a href="/post/march-7-2017-in-class-project/" itemprop="url">March 7, 2017 In-Class Project</a>
+    <a href="https://wanting-zhai.github.io/post/march-7-2017-in-class-project/" itemprop="url">March 7, 2017 In-Class Project</a>
   </h3>
   
 
@@ -382,7 +382,7 @@ gamma.jackknife &lt;- function(a_vector) { n1=length(a_vector) estimate_a=c(n1) 
     
   </div>
   <p class="read-more">
-    <a href="/post/march-7-2017-in-class-project/" class="btn btn-primary btn-outline">
+    <a href="https://wanting-zhai.github.io/post/march-7-2017-in-class-project/" class="btn btn-primary btn-outline">
       CONTINUE READING
     </a>
   </p>
@@ -397,7 +397,7 @@ gamma.jackknife &lt;- function(a_vector) { n1=length(a_vector) estimate_a=c(n1) 
   
   
   <h3 class="article-title" itemprop="name">
-    <a href="/post/february-28-2017-in-class-project/" itemprop="url">February 28, 2017 - In-Class Project</a>
+    <a href="https://wanting-zhai.github.io/post/february-28-2017-in-class-project/" itemprop="url">February 28, 2017 - In-Class Project</a>
   </h3>
   
 
@@ -425,7 +425,7 @@ gamma.jackknife &lt;- function(a_vector) { n1=length(a_vector) estimate_a=c(n1) 
     
   </div>
   <p class="read-more">
-    <a href="/post/february-28-2017-in-class-project/" class="btn btn-primary btn-outline">
+    <a href="https://wanting-zhai.github.io/post/february-28-2017-in-class-project/" class="btn btn-primary btn-outline">
       CONTINUE READING
     </a>
   </p>
